test/libyul/yulSyntaxTests/dot_trailing_function.yul
{
    function x.() {}
}
// ----
// SyntaxError 3384: (6-22): "x." is not a valid identifier (ends with a dot).
